--- a/css.css
+++ b/css.css
@@ -66,3 +66,14 @@
 .fright {
     float: right;
 }
+
+/* KEYFRAMES */
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.dnone {
+    display: none !important;
+}
